Fix scrollbar on Ko-Fi embed for Safari

--- a/src/app.css
+++ b/src/app.css
@@ -125,7 +125,7 @@ body {
 
 .floatingchat-donate-button,
 .floatingchat-container {
-	width: 214px !important;
+	width: 216px !important;
 	height: 46px !important;
 	border-radius: 3rem;
 	overflow: hidden;
